<resources>

    <string name="maps_key">AIzaSyDeXOAmuK8zmzv7Qayx6pu8JFeKUB5EaaE</string>

    <string name="app_name">Final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="titulo">La Cosa</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="key1">Mi Ubicación</string>
    <string name="key2">Contactos</string>
    <string name="key3">Nombre</string>
    <string name="key4">Email</string>
    <string name="camara">Iniciar Camara</string>

    <string name="menu1">Agregar</string>
    <string name="menu2">Listar</string>
    <string name="menu3">Null</string>
    <string name="menu4">Camara</string>

    <string name="Prueba1">Nombre</string>
    <string name="Prueba2">Email</string>

    <string name="Ori">Girar</string>

    <string name="Ubicacion">Ver Ubicación</string>
    <string name="title_activity_login">Sign in</string>

    <string name="registro">Registrar</string>

    <string name="op">Menu</string>
    <string name="op1">Ubicación</string>
    <string name="op2">Camara</string>


</resources>
