<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <include layout="@layout/content_main" />

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <com.github.clans.fab.FloatingActionMenu
           android:id="@+id/mp"
           app:menu_fab_label="@string/op"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <com.github.clans.fab.FloatingActionButton
               android:id="@+id/cam"
               app:fab_label="@string/op2"
               android:onClick="cliccam"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:src="@drawable/ic_camera_retro_solid" />

           <com.github.clans.fab.FloatingActionButton
               android:id="@+id/ubi"
               app:fab_label="@string/op1"
               android:onClick="clicubi"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:src="@drawable/ic_search_location_solid" />
       </com.github.clans.fab.FloatingActionMenu>
   </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>